Signin buttons poorly aligned since added to scrollview with onboarding https://github.com/kidoju/Kidoju-Mobile/issues/165

--- a/styles/app.mobile.less
+++ b/styles/app.mobile.less
@@ -280,11 +280,12 @@ html, body {
             }
         }
         .km-list > li {
-            padding: .5em .9em;
+            padding: .5em 0;
             >span.km-icon {
                 display: none; // Fix for a useless span that breaks our layout
             }
             .km-button {
+                box-sizing: border-box;
                 width: 100%;
                 .km-icon {
                     margin-left: -0.7em;
